fix(gouvernances): aligner les couleurs hexadécimales des graphiques avec les variables CSS DSFR

--- a/src/components/shared/Dot/Dot.module.css
+++ b/src/components/shared/Dot/Dot.module.css
@@ -59,7 +59,7 @@
 
 /* Purple colors */
 .dot-purple-glycine-sun-113-moon-797 {
-  background-color: var(--purple-glycine-sun-113-moon-797);
+  background-color: var(--purple-glycine-sun-319-moon-630);
 }
 
 .dot-purple-glycine-975-75 {
@@ -67,19 +67,19 @@
 }
 
 .dot-purple-glycine-main-732 {
-  background-color: var(--purple-glycine-main-732);
+  background-color: var(--graphique-purple-glycine-main-732);
 }
 
 .dot-purple-glycine-200-850 {
-  background-color: var(--purple-glycine-200-850);
+  background-color: var(--graphique-purple-glycine-200-850);
 }
 
 .dot-purple-glycine-125-925 {
-  background-color: var(--purple-glycine-125-925);
+  background-color: var(--purple-glycine-925-125);
 }
 
 .dot-purple-glycine-100-950 {
-  background-color: var(--purple-glycine-100-950);
+  background-color: var(--graphique-purple-glycine-100-950);
 }
 
 /* Pink colors */
@@ -133,7 +133,7 @@
 }
 
 .dot-green-archipel-main-648 {
-  background-color: var(--green-archipel-main-648);
+  background-color: var(--green-archipel-main-557);
 }
 
 .dot-green-bourgeon-main-640 {
